Ditch Controller => Service pattern

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,5 +1,5 @@
 header.header
-    h1.logo this is header
+    h1.logo BBS
     div.wrap-nav
         nav.nav-main
             a.nav-link(href="/") Home
